# belabot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: belabox.rs  bot.rs  command_handler.rs  config.rs  error.rs  lib.rs  main.rs  monitor.rs  twitch.rs
src/belabox/: messages.rs  requests.rs
