[package]
name = "belabot"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
read_input = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
strsim = "0.11.1"
tokio = { version = "1.20.1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = [ "native-tls" ] }
twitch-irc = "5.0"

anyhow = "1.0"
thiserror = "1.0.31"

tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
